--- a/views/service_single.ejs
+++ b/views/service_single.ejs
@@ -35,11 +35,11 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 position-relative">
-            <% if(service) {%>
+           
             <div class="about-img-box">
-              <img src=<%= service.img.url %>" alt="" class="img-fluid">
+              <img src="<%= service.img.url %>" alt="" class="img-fluid">
             </div>
-            <% } %>
+           
             <div class="sinse-box">
               <h3 class="sinse-title">Valiantfoot Limited
                 <span></span>
@@ -50,11 +50,11 @@
           </div>
           <div class="col-md-12 section-t8 position-relative">
             <div class="row">
-              <% if(service) {%>
+             
               <div class="col-md-6 col-lg-5">
-                <img src=<%= service.img2.url%>" alt="" class="img-fluid">
+                <img src="<%= service.img2.url %>" alt="" class="img-fluid">
               </div>
-              <% } %>
+             
               <div class="col-lg-2  d-none d-lg-block position-relative">
                 <div class="title-vertical d-flex justify-content-start">
                   <span>Valiantfoot Exclusive Property</span>
