--- a/views/index.ejs
+++ b/views/index.ejs
@@ -136,7 +136,7 @@
 
               <div class="col-md-6 col-lg-5 section-md-t3 post-content ">
                 
-                <h1 style="font-weight: bold; color: orange;"><%= vision.heading %></h1>
+                <h1 style="font-weight: bold; color: rgb(224, 150, 22);"><%= vision.heading %></h1>
                 <p class="color-text-a post-intro role" style="font-weight: bold; color: grey;">
                  <%= vision.vision %>
                 </p>
@@ -172,7 +172,7 @@
 
               <div class="col-md-6 col-lg-5 section-md-t3 post-content ">
                 
-                <h1 style="font-weight: bold; color: yellowgreen;">OUR ROLE</h1>
+                <h1 style="font-weight: bold; color: rgb(102, 143, 21);">OUR ROLE</h1>
                 <p class="color-text-a post-intro role" style="font-weight: bold; color: grey;"">
                   Our basic role at Valiant Foot is to secure suitable Lands for everyone, irrespective of social class, income level and all else.
                 </p>
@@ -205,13 +205,14 @@
 
               <div class="col-md-6 col-lg-5 section-md-t3 post-content ">
                 
-                <h1 style="font-weight: bold; color: red;">CORE VALUES</h1>
+                <h1 style="font-weight: bold; color: rgb(128, 4, 4);">CORE VALUES</h1>
                 
                 
                     <p style="font-weight: bold; color: grey;">Integrity</p>
                     <p style="font-weight: bold; color: grey;">Partnership</p>
-                    <p style="font-weight: bold; color: grey;">Quality</p>
                     <p style="font-weight: bold; color: grey;">Promise to Customer</p>
+                    <p style="font-weight: bold; color: grey;">Quality</p>
+                    
                  
                
                
