--- a/views/property-single.ejs
+++ b/views/property-single.ejs
@@ -180,7 +180,7 @@
                   <% } %>
               </div>
               </div>
-            <% if (prop.floor_plan.contentType) {%>
+            <% if (prop.floor_plan.url) {%>
               <div class="tab-pane fade" id="pills-plans" role="tabpanel" aria-labelledby="pills-plans-tab">
                 <img src="<%= prop.floor_plan.url %>" alt="" class="img-fluid">
               </div>
