--- a/views/blog-single.ejs
+++ b/views/blog-single.ejs
@@ -9,7 +9,7 @@
         <div class="row">
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
-              <h1 class="title-single"><%= blog.category %></h1>
+              <h1 class="title-single"><%= blog.topic %></h1>
               <span class="color-text-a">News Single.</span>
             </div>
           </div>
@@ -20,7 +20,7 @@
                   <a href="/homing">Home</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">
-                  <%= blog.topic %>
+                  <%= blog.category %>
                 </li>
               </ol>
             </nav>
